ecmascript/parser/tests/test262-error-references/fail/f872cf801765a723.js.stderr
error: Unexpected token `.`. Expected target
 --> $DIR/tests/test262-parser/fail/f872cf801765a723.js:1:30
  |
1 | var x = function() { y = new..target; }
  |                              ^

